<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/menu_btn_clear_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/menu_btn_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/menu_btn_save" />

    <item
        android:id="@+id/action_restore"
        android:icon="@drawable/ic_restore_page_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/menu_btn_restore" />

</menu>