<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="16dp"
    android:minHeight="280dp"
    android:minWidth="300dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/nameWrapper"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/name"
            android:imeOptions="actionNext"
            android:lines="1"
            android:maxLength="18"
            android:inputType="textCapSentences|textAutoCorrect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/valueWrapper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameWrapper">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/value"
            android:lines="1"
            android:maxLength="7"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_value" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/savePerson"
        style="@style/MyButton"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_add_person"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>